--- a/public/bundles/stylesheet.bundle.css
+++ b/public/bundles/stylesheet.bundle.css
@@ -2671,9 +2671,14 @@ div.container footer {
     .container.survey > .content > h1 > i {
       color: #3BC363;
       margin-right: 10px; }
-  .container.survey > .content h1, .container.survey > .content p, .container.survey > .content .questions-counter, .container.survey > .content .answers {
+  .container.survey > .content h1, .container.survey > .content p, .container.survey > .content .questions-counter, .container.survey > .content .result-title, .container.survey > .content .answers {
     margin-bottom: 30px; }
-  .container.survey > .content .questions-counter {
+  .container.survey > .content > .result-image > img {
+    min-width: 600px;
+    max-width: 800px;
+    display: block;
+    margin: 0 auto; }
+  .container.survey > .content .questions-counter, .container.survey > .content .result-title {
     font-size: 32px;
     text-align: center;
     color: #3BC363; }
