added start over button to survey result

--- a/frontend/stylesheets/survey.scss
+++ b/frontend/stylesheets/survey.scss
@@ -78,6 +78,10 @@
     .actions {
       @include flexbox;
       @include justify-content(center);
+
+      &.result {
+        margin-top: 30px;
+      }
     }
   }
 }
