--- a/public/bundles/stylesheet.bundle.css
+++ b/public/bundles/stylesheet.bundle.css
@@ -2702,17 +2702,19 @@ div.container footer {
       .container.survey > .content .answers > li:last-child {
         border-bottom: 1px solid #CBD0CD; }
       .container.survey > .content .answers > li:hover > i.unanswered {
-        background-image: url("/images/surveys/QuizHover@2x.png"); }
+        background-position: 0px -32px; }
       .container.survey > .content .answers > li > i {
         width: 32px;
         height: 32px;
-        background-image: url("/images/surveys/QuizSelector@2x.png");
+        background-image: url("/images/surveys/sprite.png");
+        background-repeat: no-repeat;
         background-size: cover;
+        background-position: 0px -64px;
         margin-right: 20px; }
         .container.survey > .content .answers > li > i.times {
-          background-image: url("/images/surveys/QuizFalse@2x.png"); }
+          background-position: 0px 0px; }
         .container.survey > .content .answers > li > i.check {
-          background-image: url("/images/surveys/QuizTrue@2x.png"); }
+          background-position: 0px -96px; }
   .container.survey > .content .actions {
     display: -webkit-flex;
     display: -moz-flex;
